--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-h1{
-  text-align: center;
+body {
+    font-family: theme('fontFamily.sans'); /* Ensure sans-serif is applied */
 }
