--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+/* body {
     font-family: theme('fontFamily.sans'); /* Ensure sans-serif is applied */
-}
+/* } */
+
