--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-/* body {
+body {
     font-family: theme('fontFamily.sans'); /* Ensure sans-serif is applied */
-/* } */
+}
 
